Refactor SPDX JSON upload test to use classpath resource and update registration parameter